--- a/website/templates/form_base.html
+++ b/website/templates/form_base.html
@@ -5,17 +5,15 @@
             <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <title>Home | The RFF</title>
+            <title>Join RSS!</title>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
             <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
             <link href="https://fonts.googleapis.com/css2?family=Bangers&family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
         </header>
-        <body>
-
+        <body class="bg">
         {% comment %} Inject Common Navbar {% endcomment %}
         {% include 'base/nav.html' %}
-
         {% if messages %}
         <div class="container mg-top"></div>
             {% for message in messages %}
@@ -25,7 +23,7 @@
             </div>
             {% endfor %}
         </div>
-        {% endif %}  
+        {% endif %}
 
         {% block content %}
 
@@ -35,4 +33,4 @@
     {% comment %} Inject Common JS FILES {% endcomment %}
     {% include 'base/js_files.html' %}
 </html>
-
+  
