--- a/website/accounts/templates/accounts/register.html
+++ b/website/accounts/templates/accounts/register.html
@@ -12,7 +12,7 @@
                     {% include 'base/form.html' %}
                     <div class="field is-grouped">
                         <div class="control">
-                            <input type="submit" value="Register" class="button is-info is-rounded">
+                            <input type="submit" value="Register" class="button is-info">
                         </div>
                     </div>
                 </form>
