--- a/website/templates/base/nav.html
+++ b/website/templates/base/nav.html
@@ -16,15 +16,25 @@
                 <a class="navbar-item" href="{% url 'home' %}">Home</a>
                 <a class="navbar-item">About</a>
                 <a class="navbar-item">Perks</a>
-                <a class="navbar-item">Jobs</a>
+                <a class="navbar-item" href="{% url 'jobs' %}">Jobs</a>
             </div>
 
             <div class="navbar-end">
+                {% if request.user.is_authenticated %}
+                <a href="#" class="navbar-item">{{ request.user.name }}</a>
+                {% endif %}
                 <div class="navbar-item">
                     <div class="buttons">
+                    {% if not request.user.is_authenticated %}
                     <a class="button is-small is-warning is-rounded" href="{% url 'login' %}">Log in</a>
                     <a class="button is-info is-small is-rounded" href="{% url 'applicant_reg' %}"><strong>Join Us</strong></a>
                     {% comment %} <a class="button is-small is-warning is-rounded">(Admin) Dash</a> {% endcomment %}
+                    {% else %}
+                    {% if request.user.is_staff %}
+                        <a href="#" class="button is-small is-info is-rounded">(Admin) Dash</a>   
+                    {% endif %}
+                    <a class="button is-small is-warning is-rounded" href="{% url 'logout' %}">Log Out</a>
+                    {% endif %}
                     </div>
                 </div>
             </div>
