--- a/website/accounts/templates/accounts/applicant_home.html
+++ b/website/accounts/templates/accounts/applicant_home.html
@@ -4,7 +4,7 @@
     <section class="section hero is-medium has-text-centered">
         <div class="hero-body">
             <div class="container">
-                <p class="subtitile"><i><b>So you've chosen resistance?</b></i></p>
+                <p class="subtitle"><i><b>So you've chosen resistance?</b></i></p>
                 <h1 class="title is-2">Welcome {{ request.user}}!</h1>
                 {{ request.user.is_authenticated }}
                 <h2 class="subtitle">{{request.user.applicant.about}}</h2>
