--- a/website/jobs/templates/jobs/job_apply.html
+++ b/website/jobs/templates/jobs/job_apply.html
@@ -14,6 +14,9 @@
                     {% include 'base/form.html' with btn_text='Login' %}
                     <div class="field is-grouped">
                         <div class="control">
+                            <a class="button is-warning" href="{% url 'jobs' %}">Go Back.</a>
+                        </div>
+                        <div class="control">
                             <input type="submit" class="button is-primary" value="Apply">
                         </div>
                     </div>
