--- a/website/app_profile/templates/app_profile/home.html
+++ b/website/app_profile/templates/app_profile/home.html
@@ -1,59 +1,36 @@
 {% extends "base.html" %}
-
+{% load static %}
 
 {% block content %}
 
-    <div class="section">
-        <div class="container">
-
-            <div class="columns is-mobile is-multiline">
-                <div class="column is-4-tablet is-10-mobile name">
-                <h1 class="title is-3">{{ request.user.name }}</h1>
-                  <p class="subtitle is-5">
-                      {{ request.user.applicant.desc }}
-                  </p>
-                </div>
-                <div class="column is-2-tablet is-4-mobile has-text-centered">
-                  <p class="stat-val">30</p>
-                  <p class="stat-key">Applications</p>
-                </div>
-                <div class="column is-2-tablet is-4-mobile has-text-centered">
-                  <p class="stat-val">5</p>
-                  <p class="stat-key">shortlisted</p>
-                </div>
-                <div class="column is-2-tablet is-4-mobile has-text-centered">
-                  <p class="stat-val">2</p>
-                  <p class="stat-key">rejected</p>
-                </div>
-            </div>
-            
-        </div>
-    </div>
 
     <div class="section">
         <div class="container">
             <div class="box has-background-info">
                 <h2 class="title has-text-white">Your Applications</h1>
             </div>
-            <div class="columns">
-                <div class="column">
-
+            <div class="columns is-multilines">
+                <div class="column is-7">
                     <table class="table is-fullwidth is-hoverable">
                         <tbody>
                             {% for japp in jobapplication_list %}
                                 <tr>
-                                    <td width="5%">{{ forloop.counter }}</td>
-                                    <td><a href="{{ japp.job.get_absolute_url }}">{{ japp.job }}</a></td>
-                                    <td><a class="button is-small is-info" href="#">{{ japp.status }}</a></td>
+                                    <td width="5%" class="subtitle">{{ forloop.counter }}</td>
+                                    <td><a href="{{ japp.job.get_absolute_url }}" class="subtitle">{{ japp.job }}</a></td>
+                                    <td><a class="button is-small is-info" href="#" class="subtitle">{{ japp.status }}</a></td>
                                 </tr>
                             {% empty %}
                                 <h1 class="title">Sed. You have no Applications Yet!.</h1>
-                                <p class="subtitle">Every applicant makes a difference. <b>APPLY NOW!</b></p>
+                                <p class="subtitle is-4">Every applicant makes a difference. <b>APPLY NOW!</b></p>
                             {% endfor %}
                         
                         </tbody>
                     </table>
-
+                </div>
+                <div class="column is-5 is-hidden-touch">
+                    <figure class="image is-3by2">
+                        <img src="{% static 'imgs/int.svg' %}" alt="Job something smh">
+                    </figure>
                 </div>
             </div>
         </div>
