admin dash made better logic wise

--- a/website/admin_dash/templates/admin_dash/job_info.html
+++ b/website/admin_dash/templates/admin_dash/job_info.html
@@ -1,6 +1,6 @@
 {% extends "admin_dash/base.html" %}
 
-{% block page_title %} Home {% endblock %}
+{% block page_title %} Admin Home {% endblock %}
 
 {% block dashcontent %}
 
