--- a/website/admin_dash/templates/admin_dash/home.html
+++ b/website/admin_dash/templates/admin_dash/home.html
@@ -8,59 +8,53 @@
     <div class="level-item has-text-centered box">
         <div>
         <p class="heading">Current Openings</p>
-        <p class="title">{{ job_list|length }}</p>
+        <p class="title">{{ num_jobs }}</p>
         </div>
     </div>
     <div class="level-item has-text-centered box">
         <div>
-        <p class="heading">Applicants</p>
+        <p class="heading">Applications</p>
         <p class="title">{{ num_apps }}</p>
         </div>
     </div>
 </nav>
 
-<div class="columns">
-    <div class="column is-6">
+<div class="columns is-mobile">
+    <div class="column is-6 is-fullscreen-mobile">
         <div class="card">
         <header class="card-header">
             <p class="card-header-title">
-            Jobs
+            Pending Applications
             </p>
         </header>
         <div class="card-table">
             <div class="content">
-                <table class="table is-fullwidth is-striped">
-                    <tbody>
-                        {% for job in job_list|slice:':5' %}
+                    <table class="table is-fullwidth is-striped">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Applied Job</th>
+                                <th>View</th>
+                            </tr>
+                        </thead>                    
+                        <tbody>
+                    {% for p_app in p_apps %}
                         <tr>
-                            {% if job.team.name == 'Engineering' %}
-                            <td width="5%"><i class="fa fa-code"></i></td>
-                            {% elif job.team.name == 'Creative'%}
-                            <td width="5%"><i class="fa fa-paint-brush"></i></td>
-                            {% elif job.team.name == 'Operations'%}
-                            <td width="5%"><i class="fa fa-cogs"></i></td>
-                            {% elif job.team.name == 'User Growth'%}
-                            <td width="5%"><i class="fa fa-user-circle"></i></td>
-                            {% elif job.team.name == 'Product'%}
-                            <td width="5%"><i class="fa fa-file"></i></td>
-                            {% endif %}
-                            <td><a>{{ job }}</a></td>
-                            <td><a class="button is-small is-primary" href="{% url 'admin_job_info' job.pk %}">View</a></td>
+                            <td>{{ p_app.applicant.user.name }}</td>
+                            <td>{{p_app.job.title}}</td>
+                            <td><a href="{% url 'admin_job_info' p_app.job.pk %}">View</a></td>
                         </tr>
                         {% empty %}
-                            <h1>You have not Posted Jobs Yet!</h1>
+                            <p class="subtitle is-5 mb-2">You have no pending applications.</p>
                         {% endfor %}
                     </tbody>
-                </table>
+                </table> 
             </div>
         </div>
-        <footer class="card-footer">
-            <a href="{% url 'admin_jobs' %}" class="card-footer-item">View All</a>
-        </footer>
         </div>
     </div>
 
-    <div class="column is-6">
+    <div class="column is-6 is-hidden-mobile">
         <article class="message is-info">
         <div class="message-header">
             <p>Message from HR</p>
