--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -61,7 +61,7 @@ nav.navbar {
   
   background-repeat: repeat;
   
-  background-image: url("https://www.apple.com/v/ipad-pro/aa/images/overview/hero_manifesto_bg__c0zrbe748m82_large.jpg");
+  background-image: url("/static/imgs/text_grad_apple.jpg");
 }
 
 
