--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -1,9 +1,11 @@
 /* Custom Styles */
+
 html, body {
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 18px;
     line-height: 1.5;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 h1.bang {
@@ -89,3 +91,28 @@ nav.navbar {
   border-radius: 10px;
   overflow:hidden;
 }
+
+.has-text-dull {
+  color: #adb5bd;
+}
+
+.main-img {
+  max-width: 100%;
+  height: auto;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+  display: block !important;
+  border-radius: 0.25rem !important;
+}
+
+.dis-4 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2.25rem;
+  font-weight: 300;
+  line-height: 1.5;
+}
+
+.bold-open {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+}
+
