--- a/website/jobs/templates/jobs/job_info.html
+++ b/website/jobs/templates/jobs/job_info.html
@@ -7,7 +7,7 @@
             <div class="columns">
                 <div class="column">
                     <p class="title">{{ job.title }}</p>
-                    <p class="subtitle">@KoolKidsKlub</p>
+                    <p class="subtitle">@KoolKidsKlan</p>
                     {% if request.user.is_authenticated and not user.is_staff%}
                     <form action="{% url 'job_apply' %}" method="get">
                         <input type="hidden" name="job_id" value="{{ job.pk }}">
@@ -64,7 +64,7 @@
                                 <p class="subtitle is-6">{{ job.pay }}</p>
                             </div>
                             <div class="content">
-                                <p class="title is-5">For</p>
+                                <p class="title is-5">Job For</p>
                                 <p class="subtitle is-6">{{ job.age }}</p>
                             </div>
                             
