--- a/website/templates/base/nav.html
+++ b/website/templates/base/nav.html
@@ -14,6 +14,8 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
                 <a class="navbar-item" href="{% url 'home' %}">Home</a>
+                <a class="navbar-item">About</a>
+                <a class="navbar-item">Perks</a>
                 <a class="navbar-item" href="{% url 'jobs' %}">Jobs</a>
             </div>
 
