--- a/website/jobs/templates/jobs/job_info.html
+++ b/website/jobs/templates/jobs/job_info.html
@@ -38,6 +38,8 @@
                             <img src="{% static 'imgs/hr.svg' %}" alt="User Growth">
                             {% elif job.team.name == 'Product'%}
                             <img src="{% static 'imgs/pm.svg' %}" alt="Product">
+                            {% elif job.team.name == 'Volunteering'%}
+                            <img src="{% static 'imgs/vol.svg' %}" alt="Volunteering">
                             {% endif %}
                         </figure>
                     </div>
