--- a/website/jobs/templates/jobs/job_list.html
+++ b/website/jobs/templates/jobs/job_list.html
@@ -59,6 +59,8 @@
                                 <img src="https://img.icons8.com/color/48/000000/user-engagement-male.png"/>
                                 {% elif job.team.name == 'Product'%}
                                 <img src="https://img.icons8.com/color/48/000000/networking-manager.png"/>
+                                {% elif job.team.name == 'Volunteering'%}
+                                <img src="https://img.icons8.com/color/48/000000/volunteering.png"/>
                                 {% endif %}
                             </p>
                             </figure>
