--- a/website/admin_dash/templates/admin_dash/home.html
+++ b/website/admin_dash/templates/admin_dash/home.html
@@ -60,7 +60,7 @@
             <p>Message from HR</p>
         </div>
             <div class="message-body">
-                <b>Organisation's Terms of Service.</b><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+                <b>Make a decision for an applicant in the order by which they appear on the screen. Decide on the pending applications first.</b><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor.
             </div>
         </article>
     </div>
