--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -33,7 +33,7 @@
 
     <section class="section hero pt-6" id="keanu">
         <div class="container">
-            <div class="columns is-centered has-text-centered">
+            <div class="columns is-centered has-text-centered is-mobile">
                 <div class="column is-8-touch">
                     <h3 class="title dis-4 has-text-black">The Illuminati &amp; Babir Koyal are not breathtaking. REVOLT!</h3>
                     <p class="subtitle is-5 has-text-dull">&mdash; Keanu Reeves <em>2027</em></p>
@@ -44,7 +44,7 @@
 
     <section class="section hero is-light pt-6" id="about">
         <div class="container">
-            <div class="columns is-centered">
+            <div class="columns is-centered is-mobile">
                 <div class="column is-6-touch has-text-centered">
                     <h2 class="title is-3 has-text-black mt-2">About Us</h2>
                     <p class="subtitle has-text-dull is-5 mt-1">
@@ -59,7 +59,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dapibus hendrerit n
 
 <div class="section" style="color: black; margin-top: 20px; border-bottom: 1px solid lightgrey;" id="perks">
     <div class="container">
-        <div class="columns is-centered">
+        <div class="columns is-centered is-mobile">
             <div class="column is-6-touch has-text-centered">
                 <h2 class="title is-3 has-text-black mt-2">Perks</h2>
                 <p class="subtitle has-text-dull is-5 mb-5">
